--- a/jenkins+docker/Dockerfile
+++ b/jenkins+docker/Dockerfile
@@ -1,5 +1,3 @@
 FROM alpine
-RUN apk add --no-cache curl wget busybox-extras netcat-openbsd python3 py-pip3 bash && \
-    pip install awscli
-RUN apk --purge -v del py-pip3
-CMD tail -f /dev/null
+RUN apk add curl wget busybox-extras netcat-openbsd python3 py-pip3 bash
+CMD ["tail", "-f", "/dev/null"]
