--- a/jenkins+docker/Dockerfile
+++ b/jenkins+docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM alpine
-RUN apk add curl wget busybox-extras netcat-openbsd python3 py-pip3 bash
+RUN apk add curl wget busybox-extras netcat-openbsd python3 py3-pip bash
 CMD ["tail", "-f", "/dev/null"]
