--- a/jenkins+docker/Dockerfile
+++ b/jenkins+docker/Dockerfile
@@ -1,3 +1,4 @@
 FROM alpine
-RUN apk add curl wget busybox-extras netcat-openbsd python3 py3-pip bash
+RUN apk add curl wget busybox-extras netcat-openbsd python3 py3-pip bash && \
+    pip install awscli
 CMD ["tail", "-f", "/dev/null"]
