--- a/jenkins+docker/Dockerfile
+++ b/jenkins+docker/Dockerfile
@@ -1,4 +1,3 @@
 FROM alpine
-RUN apk add curl wget busybox-extras netcat-openbsd python3 py3-pip bash && \
-    pip install awscli
+RUN apk add curl wget busybox-extras netcat-openbsd python3 py3-pip bash
 CMD ["tail", "-f", "/dev/null"]
